Add strong typing conversions, with extensibility. You can now say:    Where(Field.CongressionalDistrict, 12) and the 12 will get properly quoted because Filed.X is strongly typed.

--- a/TechRoanoke.DataTrustClient.Tests/TechRoanoke.DataTrustClient.Tests.csproj
+++ b/TechRoanoke.DataTrustClient.Tests/TechRoanoke.DataTrustClient.Tests.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="DbConverterTests.cs" />
     <Compile Include="QueryBuilderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TableTests.cs" />
